--- a/index.html
+++ b/index.html
@@ -85,3 +85,20 @@
   </div>
 </body>
 </html>
+// Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+const firebaseConfig = {
+  apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
+  authDomain: "xavamoz.firebaseapp.com",
+  projectId: "xavamoz",
+  storageBucket: "xavamoz.firebasestorage.app",
+  messagingSenderId: "681441008756",
+  appId: "1:681441008756:web:433985ef3f374672b78521"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
