--- a/index.html
+++ b/index.html
@@ -1,133 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cadastro</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cadastro - MozVendas</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      padding: 20px;
       background: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
-    form {
+    .form-container {
+      max-width: 400px;
+      margin: auto;
       background: white;
-      padding: 25px;
+      padding: 20px;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 300px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    input {
-      display: block;
-      margin-bottom: 15px;
+    input, button {
       width: 100%;
+      margin-top: 10px;
       padding: 10px;
+      border-radius: 5px;
       border: 1px solid #ccc;
-      border-radius: 4px;
     }
     button {
-      padding: 10px;
-      width: 100%;
-      background-color: #28a745;
+      background-color: #007bff;
       color: white;
       border: none;
-      border-radius: 4px;
-      cursor: pointer;
+      font-weight: bold;
     }
-    button:hover {
-      background-color: #218838;
-    }
-    small {
-      display: block;
-      margin-top: -10px;
-      margin-bottom: 10px;
+    .alert {
       font-size: 12px;
-      color: #555;
+      color: #d9534f;
     }
   </style>
 </head>
 <body>
 
-  <form id="cadastroForm">
-    <h2>Cadastro</h2>
-    
-    <input type="email" id="email" placeholder="Seu e-mail" required>
-    <small>⚠️ Use um e-mail real</small>
+<div class="form-container">
+  <h2>Cadastro</h2>
+  <input type="email" id="email" placeholder="Email" required />
+  <div class="alert">Use um e-mail real</div>
+  <input type="password" id="senha" placeholder="Senha" required />
+  <div class="alert">Use uma senha correcta</div>
+  <input type="password" id="repetirSenha" placeholder="Repetir senha" required />
+  <input type="text" id="whatsapp" placeholder="Número do WhatsApp" required />
+  <button onclick="cadastrar()">Cadastrar</button>
+  <p id="mensagem"></p>
+</div>
 
-    <input type="password" id="senha" placeholder="Senha" required>
-    <small>⚠️ Use uma senha segura</small>
+<!-- Firebase SDKs -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+  import { getFirestore, setDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    <input type="password" id="repetir-senha" placeholder="Repetir senha" required>
+  const firebaseConfig = {
+    apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
+    authDomain: "xavamoz.firebaseapp.com",
+    projectId: "xavamoz",
+    storageBucket: "xavamoz.appspot.com",
+    messagingSenderId: "681441008756",
+    appId: "1:681441008756:web:433985ef3f374672b78521"
+  };
 
-    <input type="text" id="whatsapp" placeholder="Número do WhatsApp" required>
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-    <button type="submit">Cadastrar</button>
-  </form>
+  window.cadastrar = async function () {
+    const email = document.getElementById("email").value.trim();
+    const senha = document.getElementById("senha").value.trim();
+    const repetirSenha = document.getElementById("repetirSenha").value.trim();
+    const whatsapp = document.getElementById("whatsapp").value.trim();
+    const mensagem = document.getElementById("mensagem");
 
-  <!-- Firebase Script -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    if (senha !== repetirSenha) {
+      mensagem.innerText = "As senhas não coincidem.";
+      return;
+    }
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyDN6WD6rxB7CqqK-OMRTkzJlSz-xNbe_Ks",
-      authDomain: "xavamoz.firebaseapp.com",
-      projectId: "xavamoz",
-      storageBucket: "xavamoz.appspot.com",
-      messagingSenderId: "681441008756",
-      appId: "1:681441008756:web:433985ef3f374672b78521"
-    };
+    try {
+      const userCredential = await createUserWithEmailAndPassword(auth, email, senha);
+      const user = userCredential.user;
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+      // Salvar dados adicionais no Firestore
+      await setDoc(doc(db, "usuarios", user.uid), {
+        email: email,
+        whatsapp: whatsapp,
+        criadoEm: new Date()
+      });
 
-    document.getElementById("cadastroForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const email = document.getElementById("email").value.trim();
-      const senha = document.getElementById("senha").value;
-      const repetirSenha = document.getElementById("repetir-senha").value;
-      const whatsapp = document.getElementById("whatsapp").value.trim();
-
-      if (!email.includes("@") || !email.includes(".")) {
-        alert("Use um e-mail válido!");
-        return;
-      }
-
-      if (senha.length < 6) {
-        alert("A senha deve ter pelo menos 6 caracteres.");
-        return;
-      }
-
-      if (senha !== repetirSenha) {
-        alert("As senhas não coincidem!");
-        return;
-      }
-
-      try {
-        const userCredential = await createUserWithEmailAndPassword(auth, email, senha);
-        const user = userCredential.user;
-
-        await setDoc(doc(db, "usuarios", user.uid), {
-          email: email,
-          whatsapp: whatsapp,
-          criadoEm: new Date()
-        });
-
-        alert("Usuário cadastrado com sucesso!");
-        // Redirecionar, se quiser:
-        // window.location.href = "login.html";
-
-      } catch (error) {
-        alert("Erro ao cadastrar: " + error.message);
-      }
-    });
-  </script>
+      mensagem.style.color = "green";
+      mensagem.innerText = "Cadastro realizado com sucesso!";
+    } catch (error) {
+      mensagem.style.color = "red";
+      mensagem.innerText = "Erro: " + error.message;
+    }
+  };
+</script>
 
 </body>
 </html>
